<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.diarioestudanteretrofit.ui.inserir.InserirFrequenciaViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.inserir.InserirFrequenciaFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar_presen_a"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"/>

        <RadioGroup
            android:id="@+id/radioGroupPresenca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="72dp">

            <RadioButton
                android:id="@+id/radio_presente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presente"
                android:layout_marginBottom="16dp"/>

            <RadioButton
                android:id="@+id/radio_ausente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ausente" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_salvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/salvar1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:layout_constraintTop_toBottomOf="@id/radioGroupPresenca"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
